# edakit

./: README.md  pyproject.toml  setup.py
.circleci/: config.yml
tests/: test_sentiment.py
