[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edakit"
version = "0.0.1"
authors = [
  { name="TagHubAI team", email="patricnewyen@gmail.com" },
]
description = "A toolkit for data exploratory analysis"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TagHubAI/edakit"
"Bug Tracker" = "https://github.com/TagHubAI/edakit/issues"